# mnist

./: .gitignore  Dockerfile  README.md  pyproject.toml
note/: mnist-predict.ipynb
src/mnist/: db.py  main.py  worker.py
