[project]
name = "mnist"
version = "0.4.4"
description = "MNIST"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "PyMySQL>=1.1.1",
    "jigeum>=1.0.2",
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ml-worker = "mnist.worker:run"

[tool.pdm]
distribution = true
